--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,5 +1,8 @@
 body {
   background-color: rgb(195, 201, 155);
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .header {
@@ -7,6 +10,12 @@ body {
   height: 80px;
   padding: 15px 40px;
   color: white;
+}
+
+.Article {
+  position: relative;
+  left: 15%;
+  width: 70%;
 }
 
 .commentBlock {
