--- a/src/client/PostSection.css
+++ b/src/client/PostSection.css
@@ -1,3 +1,11 @@
 body {
   background-color: white;
 }
+
+.postHeader {
+  background-color: rgb(221, 221, 255);
+  height: 80px;
+  padding: 15px 40px;
+  border-bottom: solid 1.5px rgba(140, 140, 140, 0.5);
+  color: white;
+}
